--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">Diego</a>
+                <a href="#">Guido</a>
             </div>
             <nav id="nav">
                 <ul>
@@ -37,7 +37,7 @@
             <div class="contenedor-img">
                 <img src="img/hero.png" alt="">
             </div>
-            <h1>DIEGO MOYANO</h1>
+            <h1>GUIDO REYES</h1>
             <h2>Programador Front End</h2>
             <div class="redes">
                 <a href="https://www.instagram.com/disegod10/"><i class="fa-brands fa-instagram"></i></a>
