--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Moyano Diego.</span> Soy estudiante en la carrera de  Sistemas y  futuro Desarrollador Full Stack . Cuento con gran motivación para avanzar en mi carrera profesional, me destaco por mi compromiso y responsabilidad. actualmente trabajo como tecnico para una importante empresa.</p>
+            <p><span>Hola, soy Guido Reyes.</span> Soy ingeniero en Tecnologías de la información y Desarrollador Full Stack . Cuento con gran motivación para avanzar en mi carrera profesional, me destaco por mi compromiso y responsabilidad. actualmente trabajo como tecnico para una importante empresa.</p>
 
             <div class="fila">
                 <!-- datos personales -->
@@ -60,23 +60,23 @@
                     <ul>
                         <li>
                             <strong>Cumpleaños</strong>
-                            14-06-1996
+                            13-05-199
                         </li>
                         <li>
                             <strong>Teléfono</strong>
-                            11-53491919
+                            0969079341
                         </li>
                         <li>
                             <strong>Email</strong>
-                            diegomoyanollc@gmail.com
+                            guidoreyes99@outlook.es
                         </li>
                         <li>
                             <strong>Website</strong>
-                            https://dmplaymoyano.github.io/
+                            https://guido99-1.github.io/
                         </li>
                         <li>
                             <strong>Dirección</strong>
-                            Guernica, Buenos Aires, Argentina
+                            Tungurahua - Baños de Agua Santa
                         </li>
                         <li>
                             <strong>Cargo</strong>
