--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="img/hero.png" alt="">
+                <img src="img/hero.jpeg" alt="">
             </div>
             <h1>GUIDO REYES</h1>
             <h2>Programador Front End</h2>
