--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <h1>GUIDO REYES</h1>
             <h2>Programador Front End</h2>
             <div class="redes">
-                <a href="https://www.instagram.com/disegod10/"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=100084694885821"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="https://www.linkedin.com/in/diego-moyano-77a6211b2"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.instagram.com/guido_r_/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/guido.reyes.79"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </div>
     </section>
