--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Guido Reyes.</span> Soy ingeniero en Tecnologías de la información y Desarrollador Full Stack . Cuento con gran motivación para avanzar en mi carrera profesional, me destaco por mi compromiso y responsabilidad. actualmente trabajo como tecnico para una importante empresa.</p>
+            <p><span>Hola, soy Guido Reyes.</span> Soy ingeniero en Tecnologías de la información y Desarrollador Full Stack . Cuento con gran motivación para avanzar en mi carrera profesional, me destaco por mi compromiso y responsabilidad. Además, valoro la oportunidad de aprender y crecer profesionalmente. Siempre estoy buscando nuevas formas de mejorar mis habilidades y mantenerme actualizado con los últimos avances en tecnología. Creo firmemente en la importancia de la colaboración y la comunicación efectiva, y estoy ansioso por contribuir a un entorno de trabajo dinámico y estimulante.</p>
 
             <div class="fila">
                 <!-- datos personales -->
@@ -59,8 +59,12 @@
                     <h3>Datos Personales</h3>
                     <ul>
                         <li>
-                            <strong>Cumpleaños</strong>
-                            13-05-199
+                            <strong>Estado civil</strong>
+                            Soltero
+                        </li>
+                        <li>
+                            <strong>Fecha de nacimiento</strong>
+                            13-05-1999
                         </li>
                         <li>
                             <strong>Teléfono</strong>
@@ -71,16 +75,16 @@
                             guidoreyes99@outlook.es
                         </li>
                         <li>
-                            <strong>Website</strong>
-                            https://guido99-1.github.io/
-                        </li>
-                        <li>
                             <strong>Dirección</strong>
                             Tungurahua - Baños de Agua Santa
                         </li>
                         <li>
-                            <strong>Cargo</strong>
-                            <span>TECNICO EN TELECOMUNICACIONES</span>
+                            <strong>Website</strong>
+                            https://guido99-1.github.io/
+                        </li>
+                        <li>
+                            <strong>linkedin</strong>
+                            https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277
                         </li>
                     </ul>
                 </div>
