--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                         </li>
                         <li>
                             <strong>linkedin</strong>
+                            <a href="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277">
+                            </a>
                             https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277
                         </li>
                     </ul>
@@ -91,7 +93,7 @@
 
                 <!-- intereses -->
                 <div class="col">
-                    <h3>Intereses</h3>
+                    <h3>Formación</h3>
                     <div class="contenedor-intereses">
                         <div class="interes">
                             <i class="fa-solid fa-gamepad"></i>
