--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
                         <li>
                             <strong>linkedin</strong>
                             <a href="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277">
+                                <span class="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277"></span>
                             </a>
-                            https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277
+                            
                         </li>
                     </ul>
                 </div>
