--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@
                         <li>
                             <strong>Website</strong>
                             https://guido99-1.github.io/
+                            <a href="https://guido99-1.github.io/">
+                                https://guido99-1.github.io/
+                            </a>
                         </li>
                         <li>
                             <strong>linkedin</strong>
                             <a href="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277">
-                                <span class="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277"></span>
+                                linkedin.com/in/guido-fabricio-reyes
                             </a>
                             
                         </li>
