--- a/index.html
+++ b/index.html
@@ -87,10 +87,7 @@
                         </li>
                         <li>
                             <strong>linkedin</strong>
-                            <a href="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277">
-                                linkedin.com/in/guido-fabricio-reyes
-                            </a>
-                            
+                            <a href="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277">linkedin.com/in/guido-fabricio-reyes</a>
                         </li>
                     </ul>
                 </div>
@@ -99,7 +96,7 @@
                 <div class="col">
                     <h3>Formación</h3>
                     <div class="contenedor-intereses">
-                        <div class="interes">
+                        <!-- <div class="interes">
                             <i class="fa-solid fa-gamepad"></i>
                             <span>JUEGOS</span>
                         </div>
@@ -130,7 +127,7 @@
                         <div class="interes">
                             <i class="fa-solid fa-camera"></i>
                             <span>FOTOS</span>
-                        </div>
+                        </div> -->
                         <div>  
                             <button> 
                                 Descargar CV <i class="fa-solid fa-download"></i>
