--- a/index.html
+++ b/index.html
@@ -81,22 +81,19 @@
                         <li>
                             <strong>Website</strong>
                             https://guido99-1.github.io/
-                            <a href="https://guido99-1.github.io/">
-                                https://guido99-1.github.io/
-                            </a>
                         </li>
                         <li>
                             <strong>linkedin</strong>
-                            <a href="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277">linkedin.com/in/guido-fabricio-reyes</a>
+                            https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277
                         </li>
                     </ul>
                 </div>
 
                 <!-- intereses -->
                 <div class="col">
-                    <h3>Formación</h3>
+                    <h3>Intereses</h3>
                     <div class="contenedor-intereses">
-                        <!-- <div class="interes">
+                        <div class="interes">
                             <i class="fa-solid fa-gamepad"></i>
                             <span>JUEGOS</span>
                         </div>
@@ -127,7 +124,7 @@
                         <div class="interes">
                             <i class="fa-solid fa-camera"></i>
                             <span>FOTOS</span>
-                        </div> -->
+                        </div>
                         <div>  
                             <button> 
                                 Descargar CV <i class="fa-solid fa-download"></i>
