--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <a href="https://www.instagram.com/guido_r_/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.facebook.com/guido.reyes.79"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://wa.link/hzhmv8"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
     </section>
