--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="img/hero.jpeg" alt="">
             </div>
             <h1>GUIDO REYES</h1>
-            <h2>Programador Front End</h2>
+            <h2>Desarrollador Full Stack</h2>
             <div class="redes">
                 <a href="https://www.instagram.com/guido_r_/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.facebook.com/guido.reyes.79"><i class="fa-brands fa-facebook-f"></i></a>
@@ -94,34 +94,36 @@
                 <div class="col">
                     <h3>Intereses</h3>
                     <div class="contenedor-intereses">
-                        <div class="interes">
+                        <!-- <div class="interes">
                             <i class="fa-solid fa-gamepad"></i>
-                            <span>JUEGOS</span>
+                            <span>JUEGOS</span> -->
+                        <!-- </div> -->
+                        <div class="interes">
+                            <i class="fa-sharp fa-solid fa-laptop-code"></i>
+                            <span>PROGRAMACIÓN</span>
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-headphones"></i>
                             <span>MUSICA</span>
                         </div>
                         <div class="interes">
+                            <i class="fa-solid fa-book"></i>
+                            <span>LIBROS</span>
+                        </div>
+                        <!-- <div class="interes">
                             <i class="fa-solid fa-plane"></i>
-                            <span>VIAJAR</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-sharp fa-solid fa-laptop-code"></i>
-                            <span>PROGRAMACION</span>
-                        </div>
+                            <span>VIAJAR</span> -->
+                        <!-- </div> -->
+                        
                         <div class="interes">
                             <i class="fa-solid fa-person-hiking"></i>
                             <span>DEPORTE</span>
                         </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-book"></i>
-                            <span>LIBROS</span>
-                        </div>
+<!--                         
                         <div class="interes">
                             <i class="fa-solid fa-car"></i>
                             <span>AUTOS</span>
-                        </div>
+                        </div> -->
                         <div class="interes">
                             <i class="fa-solid fa-camera"></i>
                             <span>FOTOS</span>
@@ -129,7 +131,7 @@
                         <div>  
                             <button> 
                                 Descargar CV <i class="fa-solid fa-download"></i>
-                                <a href="https://drive.google.com/file/d/1vwy05hvbFHi-_nr-cj7ZgVbtwbB-ImDz/view?usp=sharing">
+                                <a href="https://drive.google.com/file/d/1I28rMctBKIK4lIeUWoMJvIx5d83UcuSK/view?usp=sharing">
                                     <span class="overlay"></span>
                                 </a>
                             </button>
