--- a/index.html
+++ b/index.html
@@ -94,10 +94,6 @@
                 <div class="col">
                     <h3>Intereses</h3>
                     <div class="contenedor-intereses">
-                        <!-- <div class="interes">
-                            <i class="fa-solid fa-gamepad"></i>
-                            <span>JUEGOS</span> -->
-                        <!-- </div> -->
                         <div class="interes">
                             <i class="fa-sharp fa-solid fa-laptop-code"></i>
                             <span>PROGRAMACIÓN</span>
@@ -110,33 +106,22 @@
                             <i class="fa-solid fa-book"></i>
                             <span>LIBROS</span>
                         </div>
-                        <!-- <div class="interes">
-                            <i class="fa-solid fa-plane"></i>
-                            <span>VIAJAR</span> -->
-                        <!-- </div> -->
-                        
                         <div class="interes">
                             <i class="fa-solid fa-person-hiking"></i>
                             <span>DEPORTE</span>
                         </div>
-<!--                         
-                        <div class="interes">
-                            <i class="fa-solid fa-car"></i>
-                            <span>AUTOS</span>
-                        </div> -->
                         <div class="interes">
                             <i class="fa-solid fa-camera"></i>
                             <span>FOTOS</span>
                         </div>
-                        <div>  
-                            <button> 
-                                Descargar CV <i class="fa-solid fa-download"></i>
-                                <a href="https://drive.google.com/file/d/1I28rMctBKIK4lIeUWoMJvIx5d83UcuSK/view?usp=sharing">
-                                    <span class="overlay"></span>
-                                </a>
-                            </button>
-                        </div>
             </head>
+            <div>  
+                <button> 
+                Descargar CV <i class="fa-solid fa-download"></i>
+                <a href="https://drive.google.com/file/d/1I28rMctBKIK4lIeUWoMJvIx5d83UcuSK/view?usp=sharing">
+                <span class="overlay"></span></a>
+                </button>
+                </div>
     </section>
 
     <!-- SECCION SKILLS -->
