--- a/index.html
+++ b/index.html
@@ -114,14 +114,18 @@
                             <i class="fa-solid fa-camera"></i>
                             <span>FOTOS</span>
                         </div>
-            </head>
+                    </div>
+                </div>
+            </div>
+            <!-- </head> -->
             <div>  
                 <button> 
                 Descargar CV <i class="fa-solid fa-download"></i>
                 <a href="https://drive.google.com/file/d/1I28rMctBKIK4lIeUWoMJvIx5d83UcuSK/view?usp=sharing">
                 <span class="overlay"></span></a>
                 </button>
-                </div>
+            </div>
+        </div>
     </section>
 
     <!-- SECCION SKILLS -->
