--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <h1>GUIDO REYES</h1>
             <h2>Desarrollador Full Stack</h2>
             <div class="redes">
-                <a href="https://www.instagram.com/guido_r_/"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.facebook.com/guido.reyes.79"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="https://www.linkedin.com/in/guido-fabricio-reyes-pullugando-440091277"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://wa.link/hzhmv8"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://www.facebook.com/guido.reyes.79"><i class="fa-brands fa-facebook-f"></i></a>
+                <!-- <a href="https://www.instagram.com/guido_r_/"><i class="fa-brands fa-instagram"></i></a> -->
             </div>
         </div>
     </section>
@@ -143,7 +143,23 @@
                         <span>Javascript</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>75%</span>
+                                <span>85%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Python</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>81%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>SQL</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -151,7 +167,7 @@
                         <span>HTML </span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>89%</span>
+                                <span>95%</span>
                             </div>
                         </div>
                     </div>
@@ -163,22 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="skill">
-                        <span>Photoshop</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>81%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <span>github</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>60%</span>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
                 
                 <!-- Professional Skills -->
@@ -189,7 +190,7 @@
                         <span>Comunicación</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>88%</span>
+                                <span>92%</span>
                             </div>
                         </div>
                     </div>
@@ -197,12 +198,12 @@
                         <span>Trabajo en Equipo</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>80%</span>
+                                <span>90%</span>
                             </div>
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Creatividad</span>
+                        <span>Capacidad de resolver problemas</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>99%</span>
@@ -210,7 +211,7 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Dedicación</span>
+                        <span>Adaptación y aprendizaje continuo</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>99%</span>
@@ -218,10 +219,10 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Proyect Management</span>
+                        <span>Responsabilidad</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>94%</span>
+                                <span>99%</span>
                             </div>
                         </div>
                     </div>
@@ -240,19 +241,21 @@
                 <div class="col izquierda">
                     <h3>Educación</h3>
                     <div class="item izq">
-                        <h4>Tecnico Agropecuario</h4>
-                        <span class="casa">Secundaria Agrotecnica</span>
-                        <span class="fecha">2007 - 2014</span>
-                        <p>Tecnico en produccion agropecuaria</p>
+                        <h4>Administración de Sistemas</h4>
+                        <span class="casa">Unidad Educativa Baños</span>
+                        <span class="fecha">2011 - 2017</span>
+                        <p>Bachillerato Técnico en Sistemas</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
                     </div>
                     <div class="item izq">
-                        <h4>Computacion Pccom_(Tucuman)</h4>
-                        <span class="casa">Operador de pc</span>
-                        <span class="fecha">2008 - 2010</span>
-                        <p>Escribir todo tipo de documentos profesionales con Microsoft WORD. Realizar presentaciones combinadas con POWERPOINT, generar y manejar una base de datos con ACCESS y llevar la administración de un negocio en una planilla EXCEL.</p>
+                        <h4>Ing. Tecnologías de la Información</h4>
+                        <span class="casa">Univeridad Técnica de Ambato</span>
+                        <span class="fecha">2018 - 2023</span>
+                        <p>Soporte, administración, diseño de telecomunicaciones y sistemas informáticos</p>
+                        <p>Programación de software</p>
+                        <p>Analista de sistemas</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
