--- a/index.html
+++ b/index.html
@@ -253,9 +253,19 @@
                         <h4>Ing. Tecnologías de la Información</h4>
                         <span class="casa">Univeridad Técnica de Ambato</span>
                         <span class="fecha">2018 - 2023</span>
-                        <p>Soporte, administración, diseño de telecomunicaciones y sistemas informáticos</p>
-                        <p>Programación de software</p>
-                        <p>Analista de sistemas</p>
+                        <p>
+                            <ul>
+                                <li>
+                                    Soporte, administración, diseño de telecomunicaciones y sistemas informáticos
+                                </li>
+                                <li>
+                                    Programación de software
+                                </li>
+                                <li>
+                                    Analista de sistema
+                                </li>
+                            </ul>
+                        </p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
