--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@
                         <p>
                             <ul>
                                 <li>
-                                    Soporte, administración, diseño de telecomunicaciones y sistemas informáticos
+                                    Soporte, administración, diseño de telecomunicaciones y sistemas informáticos.
                                 </li>
                                 <li>
-                                    Programación de software
+                                    Programación de software.
                                 </li>
                                 <li>
-                                    Analista de sistema
+                                    Analista de sistema.
                                 </li>
                             </ul>
                         </p>
@@ -270,7 +270,7 @@
                             <div class="circuloi"></div>
                         </div>
                     </div>
-                    <div class="item izq">
+                    <!-- <div class="item izq">
                         <h4>Programador Full Stack</h4>
                         <span class="casa">Online-Platzi</span>
                         <span class="fecha">2023 - Actualmente</span>
@@ -282,22 +282,22 @@
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
                         <h4>Tecnico Redes</h4>
-                        <span class="casa">Claro</span>
-                        <span class="fecha">2019 - 2021</span>
-                        <p>Instalacion de internet fibra optica y tv, realizar service de mantenimiento de lineas, trabajo en altura y manejo de fibra optica.instalacion de internet fibra optica y tv, realizar service de mantenimiento de lineas, trabajo en altura y manejo de fibra optica.
+                        <span class="casa">Premier TvNET</span>
+                        <span class="fecha">2022</span>
+                        <p>Instalacion de internet fibra optica y tv, mantenimiento de lineas, trabajo en altura y manejo de fibra optica.
                             Aptitudes: Interconexión de redes IP · Servicios técnicos · Mantenimiento preventivo · Instalación de hardware · Televisión por cable · Atención al cliente · Adaptación · Mantenimiento y reparaciones · IPTV · Redes inalámbricas · Cableado · Redes de fibra óptica · Inglés · Servicios web · Fibra óptica · Telecomunicaciones · Servicio de atención al cliente</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
-                    <div class="item der">
+                    <!-- <div class="item der">
                         <h4>Tecnico Instalador</h4>
                         <span class="casa">Movistar</span>
                         <span class="fecha">2021 - 2022</span>
@@ -309,8 +309,8 @@
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
-                    </div>
-                    <div class="item der">
+                    </div> -->
+                    <!-- <div class="item der">
                         <h4>Service Tecnico</h4>
                         <span class="casa">Telecentro</span>
                         <span class="fecha">2022 - Actualmente</span>
@@ -325,7 +325,7 @@
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
