--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@
                         </div>
                     </div> -->
                 </div>
+                <div>
+                    <h3>Cursos</h3>
+                </div>
 
                 <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
