--- a/index.html
+++ b/index.html
@@ -284,9 +284,53 @@
                         </div>
                     </div> -->
                 </div>
-                <div>
-                    <h3>Cursos</h3>
-                </div>
+                <div class="fila">
+                    <div class="col izquierda">
+                        <h3>Educación</h3>
+                        <div class="item izq">
+                            <h4>Administración de Sistemas</h4>
+                            <span class="casa">Unidad Educativa Baños</span>
+                            <span class="fecha">2011 - 2017</span>
+                            <p>Bachillerato Técnico en Sistemas</p>
+                            <div class="conectori">
+                                <div class="circuloi"></div>
+                            </div>
+                        </div>
+                        <div class="item izq">
+                            <h4>Ing. Tecnologías de la Información</h4>
+                            <span class="casa">Univeridad Técnica de Ambato</span>
+                            <span class="fecha">2018 - 2023</span>
+                            <p>
+                                <ul>
+                                    <li>
+                                        Soporte, administración, diseño de telecomunicaciones y sistemas informáticos.
+                                    </li>
+                                    <li>
+                                        Programación de software.
+                                    </li>
+                                    <li>
+                                        Analista de sistema.
+                                    </li>
+                                </ul>
+                            </p>
+                            <div class="conectori">
+                                <div class="circuloi"></div>
+                            </div>
+                        </div>
+                        <!-- <div class="item izq">
+                            <h4>Programador Full Stack</h4>
+                            <span class="casa">Online-Platzi</span>
+                            <span class="fecha">2023 - Actualmente</span>
+                            <p>Dominacion de Javascript, entendimiento de HTML y aprendizaje de algoritmos, lógica del código, cómo programar un videojuego web de principio a fin.
+                                Escribe código fluido con HTML, CSS y JavaScript
+                                Diseña algoritmos
+                                Desarrolla software con funciones, objetos y eventos
+                                Programa un videojuego para la web</p>
+                            <div class="conectori">
+                                <div class="circuloi"></div>
+                            </div>
+                        </div> -->
+                    </div>
 
                 <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
