--- a/index.html
+++ b/index.html
@@ -315,41 +315,23 @@
                         <h4>Tecnico Redes</h4>
                         <span class="casa">Premier TvNET</span>
                         <span class="fecha">2022</span>
-                        <p>Instalacion de internet fibra optica y tv, mantenimiento de lineas, trabajo en altura y manejo de fibra optica.
-                            Aptitudes: Interconexión de redes IP · Servicios técnicos · Mantenimiento preventivo · Instalación de hardware · Televisión por cable · Atención al cliente · Adaptación · Mantenimiento y reparaciones · IPTV · Redes inalámbricas · Cableado · Redes de fibra óptica · Inglés · Servicios web · Fibra óptica · Telecomunicaciones · Servicio de atención al cliente</p>
+                        <p>Instalacion de internet, mantenimiento de lineas, trabajo en altura y manejo de fibra optica.
+                            Aptitudes: 
+                            <ul>
+                                <li>Interconeción de redes IP</li>
+                                <li>Servicios técnicos</li> 
+                                <li>Mantenimiento preventivo</li> 
+                                <li>Instalación de hardware</li> 
+                                <li>Atención al cliente</li> 
+                                <li>Mantenimiento y reparaciones de equipos</li> 
+                                <li>Redes inalámbricas</li> 
+                                <li>Redes de fibra óptica</li> 
+                            </ul>       
+                        </p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
-                    <!-- <div class="item der">
-                        <h4>Tecnico Instalador</h4>
-                        <span class="casa">Movistar</span>
-                        <span class="fecha">2021 - 2022</span>
-                        <p>Instalacion de internet fibra optica y tv, realizar service de mantenimiento de lineas, trabajo en altura y manejo de fibra optica.
-                            MANEJO DE APLICACIONES 
-                            1 MOBBI
-                            2 PDR(portal de relacion de movistar)
-                            3 ORACLE</p>
-                        <div class="conectord">
-                            <div class="circulod"></div>
-                        </div>
-                    </div> -->
-                    <!-- <div class="item der">
-                        <h4>Service Tecnico</h4>
-                        <span class="casa">Telecentro</span>
-                        <span class="fecha">2022 - Actualmente</span>
-                        <p>Instalación y reparación en red de acceso HFC y FTTH
-                            Análisis, detección y resolución de fallas.
-                            Mantenimiento preventivo y correctivo.
-                            Instalación y configuración de Cable Modems, Set Top Box, routers, etc.
-                            Generación de Tickets.
-                            Trato directo con clientes.
-                            Uso de instrumental HFC: Viavi ONX-220Instalación y reparación en red de acceso HFC y FTTH Análisis, detección y resolución de fallas. Mantenimiento preventivo y correctivo. Instalación y configuración de Cable Modems, Set Top Box, routers, etc. Generación de Tickets. Trato directo con clientes. Uso de instrumental HFC: Viavi ONX-220
-                            Aptitudes: Interconexión de redes IP · Servicios técnicos · Mantenimiento preventivo · Instalación de hardware · Televisión por cable · Atención al cliente · Adaptación · Mantenimiento y reparaciones · IPTV · Redes inalámbricas</p>
-                        <div class="conectord">
-                            <div class="circulod"></div>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </div>
@@ -361,11 +343,11 @@
             <h2>PORTFOLIO</h2>
             <div class="galeria">
                 <div class="proyecto">
-                    <a href="http://www.dmplaymovies.eshost.com.ar/">
-                    <img src="img/p1.jpg" alt="">
+                    <a href="https://www.imagineecuador.com/es/">
+                    <img src="img/imagen1.png" alt="">
                     <div class="overlay">
-                        <h3>Dmplay!</h3>
-                        <p>Pagina Web De Peliculas</p></a>
+                        <h3>Imagine Ecuador</h3>
+                        <p>Marketing Digital</p></a>
                     </div>
                 </div>
                 <div class="proyecto">
