--- a/index.html
+++ b/index.html
@@ -365,29 +365,6 @@
                         <p>Trabajos</p></a>
                     </div>
                 </div>
-                <div class="proyecto">
-                    <a href="https://elated-sky-6805.glideapp.io/">
-                    <img src="img/p4.jpg" alt="">
-                    <div class="overlay">
-                        <h3>Dmplay app</h3>
-                        <p>Aplicacion</p></a>
-                    </div>
-                </div>
-                <div class="proyecto">
-                    <a href="https://kinesiomari.github.io/"></a>
-                    <img src="img/p5.jpg" alt="">
-                    <div class="overlay">
-                        <h3>Kinesio Mari</h3>
-                        <p>pagina web de kinesiologia</p></a>
-                    </div>
-                </div>
-                <div class="proyecto">
-                    <img src="img/p6.jpg" alt="">
-                    <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -398,7 +375,7 @@
             <div class="fila">
                 <!-- Formulario -->
                 <div class="col">
-                    <input type="text" placeholder="Tú Nombre">
+                    <input type="text" placeholder="Nombre">
                     <input type="text" placeholder="Número telefónico">
                     <input type="text" placeholder="Dirección de correo">
                     <input type="text" placeholder="Tema">
@@ -410,7 +387,7 @@
                 </div>
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="img/ubicacion.png" alt="">
+                    <img src="img/imagen1.png" alt="">
                     <div class="info">
                         <ul>
                             <li>
