--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 </div>
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="img/imagen1.png" alt="">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11055.775841826315!2d-78.42736284220254!3d-1.3956482900878404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sec!4v1696260438415!5m2!1ses!2sec" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <div class="info">
                         <ul>
                             <li>
