--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <h2>PORTFOLIO</h2>
             <div class="galeria">
                 <div class="proyecto">
-                    <a href="https://www.imagineecuador.com/es/">
+                    <a href="https://www.imagineecuador.com/es/" style="text-decoration:none">
                     <img src="img/imagen1.png" alt="">
                     <div class="overlay">
                         <h3>Imagine Ecuador</h3>
@@ -351,7 +351,7 @@
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p2.jpg" alt="">
+                    <img src="img/chatbot.jpg" alt="">
                     <div class="overlay">
                         <h3>Calculadora</h3>
                         <p>proyecto calculadora</p>
