--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <h2>PORTFOLIO</h2>
             <div class="galeria">
                 <div class="proyecto">
-                    <a href="https://www.imagineecuador.com/es/" style="text-decoration:none">
+                    <a href="https://www.imagineecuador.com/es/" style="text-decoration:none" style="color: aliceblue;">
                     <img src="img/imagen1.png" alt="">
                     <div class="overlay">
                         <h3>Imagine Ecuador</h3>
