--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@
                         <h4>Tecnico Redes</h4>
                         <span class="casa">Premier TvNET</span>
                         <span class="fecha">2022</span>
-                        <p>Instalacion de internet, mantenimiento de lineas, trabajo en altura y manejo de fibra optica.
+                        <p>Instalación de internet, mantenimiento de líneas, trabajo en altura y manejo de fibra óptica.
                             Aptitudes: 
                             <ul>
-                                <li>Interconeción de redes IP</li>
+                                <li>Interconexión de redes IP</li>
                                 <li>Servicios técnicos</li> 
                                 <li>Mantenimiento preventivo</li> 
                                 <li>Instalación de hardware</li> 
