--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         </div>
     </section>
 
-    <!-- SECCION PORTFOLIO -->
+    <!-- SECCION PORTFOLIO
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
             <h2>PORTFOLIO</h2>
@@ -367,7 +367,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- SECCION PORTAFOLIO -->
     <section id="portfolio">
         <h3 class="titulo-seccion">Mis Proyectos</h3>
