--- a/index.html
+++ b/index.html
@@ -336,8 +336,7 @@
             </div>
         </div>
     </section>
-
-    <!-- SECCION PORTFOLIO
+ <!-- SECCION PORTFOLIO -->
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
             <h2>PORTFOLIO</h2>
@@ -367,9 +366,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section> 
     <!-- SECCION PORTAFOLIO -->
-    <section id="portfolio">
+    <!-- <section id="portfolio">
         <h3 class="titulo-seccion">Mis Proyectos</h3>
         <div class="fila">
             <div class="proyecto">
@@ -449,7 +448,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- SECCION CONTACTO -->
     <section id="contacto" class="contacto">
         <div class="contenido-seccion">
